# playit-gcp

./: README.md  docker-build-push-gcp.sh  docker-compose.yaml  error  temporary.py
classifier/: .env.prod  gcp.py  main.py  models.py  pyproject.toml  requirements.txt  users_priorities.py
classifier/config/: __init__.py  gcp.py  playit.py
classifier/gcp/cloud_tasks/: tasks_client.py
classifier/gcp/firestore/: firestore_client.py
classifier/gcp/pubsub/: publisher_client.py  subscriber_client.py
classifier/models/: playlist_to_priorities.py  playlist_to_users_priorities.py  priorities.py  start_classifier_request.py  users_by_priorities.py
playit_api/: .env.prod  Dockerfile  main.py  pyproject.toml  requirements.txt
playit_api/authorization/: authorization_code.py  authorization_code_pkce.py  token_refresh.py
playit_api/clients/: spotify_client.py
playit_api/config/: __init__.py  gcp.py  spotify.py
playit_api/models/: playlist.py  track.py
playit_api/repositories/: playlist_repository.py  track_repository.py
playit_api/repositories/audio_streaming/: base.py  spotify_playlist_repository.py  spotify_track_repository.py
playit_api/repositories/database/: base.py  (+1 more)
playit_api_gateway/: gcp.py  main.py  models.py  pyproject.toml  requirements.txt  users_priorities.py
playit_api_gateway/config/: __init__.py  playit_settings.py
playit_api_gateway/models/: create_session_request.py  set_queues_weights_request.py  set_users_priorities_request.py
scheduler/: .env.prod  Dockerfile  gcp.py  main.py  models.py  priorities.py  pyproject.toml  requirements.txt
scheduler/config/: gcp.py  playit.py
scheduler/gcp/cloud_task/: tasks_client.py
scheduler/gcp/firestore/: firestore_client.py
scheduler/gcp/pubsub/: subscriber_client.py
scheduler/models/: queue_weights.py  start_scheduler_request.py
test/: playlist.http
